Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132697

FAIL! : tst_QQmlDebugJS::setBreakpointInScriptThatQuits(custom) 'm_process->waitForFinished()' returned FALSE.

XMLWordPrintable

    • 6ce164b3e (6.9), 38f287443 (6.8), 6763e25cb (dev), 97b41af2a (6.9), b1b7c64a3 (6.8), 2f169f9e0 (6.9.0), b5e47fa43 (6.9.0), 08325952e (dev), 1a54a0330 (dev), 5bfbc3f17 (6.9), 73772be07 (tqtc/lts-6.8), 956531414 (6.9), d80283a85 (tqtc/lts-6.8)

      ********* Start testing of tst_QQmlDebugJS *********
      Config: Using QtTest library 6.10.0, Qt 6.10.0 (arm64-little_endian-lp64 shared (dynamic) debug build; by Apple LLVM 15.0.0 (clang-1500.3.9.4)), macos 13.6
      PASS   : tst_QQmlDebugJS::initTestCase()
      FAIL!  : tst_QQmlDebugJS::setBreakpointInScriptThatQuits(custom) 'm_process->waitForFinished()' returned FALSE. ()
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/qml/debugger/qqmldebugjs/tst_qqmldebugjs.cpp(442)]
      QDEBUG : tst_QQmlDebugJS::setBreakpointInScriptThatQuits(custom) 
      DEBUGGEE OUTPUT:
      "QML Debugger: Waiting for connection on port 13773...\n"
      QDEBUG : tst_QQmlDebugJS::setBreakpointInScriptThatQuits(custom) Process State: "running"
      QDEBUG : tst_QQmlDebugJS::setBreakpointInScriptThatQuits(custom) Application Output: "QML Debugger: Waiting for connection on port 13773...\n"
      QDEBUG : tst_QQmlDebugJS::setBreakpointInScriptThatQuits(custom) Connection State: "connected"
      QDEBUG : tst_QQmlDebugJS::setBreakpointInScriptThatQuits(custom) "V8Debugger" State: "Enabled"
      PASS   : tst_QQmlDebugJS::cleanupTestCase()
      Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 30324ms
      ********* Finished testing of tst_QQmlDebugJS *********
      

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/609361d3c61e93d811bbb374e85ece83d55b0850/MacOSMacOS_13arm64MacOSMacOS_13arm64Clangqtci-macos-13-arm-107-6ee1c6TestOnly/1452f254f301af3410f1611141ff8e12bf2f56b0/test_1736415364/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1736415205

      Tested changes (refs/builds/qtci/dev/1736412526):
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/615966/2 Update dependencies on 'dev' in qt/qtdeclarative

        For Gerrit Dashboard: QTBUG-132697
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes